feat: P4ADEV-3443 native API get-assessment (#107)